--- a/src/app/registration-form/registration-form.component.html
+++ b/src/app/registration-form/registration-form.component.html
@@ -18,65 +18,18 @@
     </div>
   </div>
 
-  <div class="form-group" [ngClass]="displayFieldCss('email')">
+  <div class="form-group" [ngClass]="displayFieldCss('country')">
     <div class="col-sm-12">
-      <label for="email" class="control-label required">Email: </label>
-      <input type="text" id="email" class="form-control" formControlName="email">
-      <error-registration-form [displayError]="isFieldValid('email')" errorMsg="Please inform your email">
+      <label for="country" class="control-label required">Country: </label>
+      <select class="form-control" id="country" formControlName="country" >
+        <option value="1">Please select a country</option>
+        <option *ngFor="let country of countries" [value]="country.id" >{{country.name}}</option>
+      </select>
+      <error-registration-form [displayError]="isFieldValid('country')" errorMsg="Please select country">
       </error-registration-form>
     </div>
   </div>
 
-  <div formGroupName="address">
-
-    <div class="form-group">
-
-      <div class="col-md-6" [ngClass]="displayFieldCss('address.street')">
-        <label for="street" class="control-label required">Address</label>
-        <input type="text" id="street" class="form-control" formControlName="street">
-        <error-registration-form [displayError]="isFieldValid('address.street')" errorMsg="Please inform your address">
-        </error-registration-form>
-      </div>
-
-      <div class="col-md-3">
-        <label for="street2" class="control-label">Address 2</label>
-        <input type="text" id="street2" class="form-control" formControlName="street2">
-      </div>
-
-      <div class="col-md-3" [ngClass]="displayFieldCss('address.zipCode')">
-        <label for="zipCode" class="control-label required">Zip Code</label>
-        <input type="text" id="zipCode" class="form-control" formControlName="zipCode">
-        <error-registration-form [displayError]="isFieldValid('address.zipCode')" errorMsg="Please inform your zipCode">
-        </error-registration-form>
-      </div>
-
-    </div>
-
-    <div class="form-group">
-
-      <div class="col-md-4" [ngClass]="displayFieldCss('address.city')">
-        <label for="city" class="control-label required">City</label>
-        <input type="text" id="city" class="form-control" formControlName="city">
-        <error-registration-form [displayError]="isFieldValid('address.city')" errorMsg="Please inform your city">
-        </error-registration-form>
-      </div>
-
-      <div class="col-md-4" [ngClass]="displayFieldCss('address.state')">
-        <label for="state" class="control-label required">State / Province / Region</label>
-        <input type="text" id="state" class="form-control" formControlName="state">
-        <error-registration-form [displayError]="isFieldValid('address.state')" errorMsg="Please inform your state">
-        </error-registration-form>
-      </div>
-
-      <div class="col-md-4" [ngClass]="displayFieldCss('address.country')">
-        <label for="country" class="control-label required">Country</label>
-        <input type="text" id="country" class="form-control" formControlName="country">
-        <error-registration-form [displayError]="isFieldValid('address.country')" errorMsg="Please inform your country">
-        </error-registration-form>
-      </div>
-
-    </div>
-  </div>
 
   <button class="btn btn-primary" (click)="onSubmit()">Submit</button>
   <button class="btn" (click)="reset()">Reset</button>
