--- a/src/app/registration-form/registration-form.component.html
+++ b/src/app/registration-form/registration-form.component.html
@@ -3,7 +3,7 @@
   <div class="form-group" [ngClass]="displayFieldCss('firstName')">
     <div class="col-sm-12">
       <label for="firstName" class="control-label required">First Name: </label>
-      <input type="text" id="firstName" class="form-control" formControlName="firstName">
+      <input type="text" id="firstName" class="form-control" [(ngModel)]="model.firstName" formControlName="firstName">
       <error-registration-form [displayError]="isFieldValid('firstName')" errorMsg="fistName should be greater than 5 characters">
       </error-registration-form>
     </div>
@@ -12,7 +12,7 @@
   <div class="form-group" [ngClass]="displayFieldCss('lastName')">
     <div class="col-sm-12">
       <label for="lastName" class="control-label required">Last Name: </label>
-      <input type="text" id="lastName" class="form-control" formControlName="lastName">
+      <input type="text" id="lastName" class="form-control" [(ngModel)]="model.lastName" formControlName="lastName">
       <error-registration-form [displayError]="isFieldValid('lastName')" errorMsg="lastName should be greater than 5 characters">
       </error-registration-form>
     </div>
@@ -21,7 +21,7 @@
   <div class="form-group" [ngClass]="displayFieldCss('phoneNumber')">
     <div class="col-sm-12">
       <label for="phoneNumber" class="control-label required">Phone Number: </label>
-      <input type="text" id="phoneNumber" class="form-control" formControlName="phoneNumber" >
+      <input type="text" id="phoneNumber" class="form-control" [(ngModel)]="model.phoneNumber" formControlName="phoneNumber" >
       <error-registration-form [displayError]="isFieldValid('phoneNumber')" errorMsg="Phone nr. should be composed by country code prefix (es: +353) and number">
       </error-registration-form>
     </div>
@@ -30,7 +30,7 @@
   <div class="form-group" [ngClass]="displayFieldCss('country')">
     <div class="col-sm-12">
       <label for="country" class="control-label required">Country: </label>
-      <select class="form-control" id="country" formControlName="country" >
+      <select class="form-control" id="country" [(ngModel)]="model.country" formControlName="country" >
         <option value="1">Please select a country</option>
         <option *ngFor="let country of countries" [value]="country.id" >{{country.name}}</option>
       </select>
